--- a/app/views/orders/orderInProgress.scala.html
+++ b/app/views/orders/orderInProgress.scala.html
@@ -52,7 +52,7 @@
 			              <td>@order.creationDate.format("dd-MM-yyyy")</td>
 			               @if(user.typeUser.id !=5){
 			              <td>
-			              @if(order.status == 1 ){ - } else { 
+			              @if(order.status.id == 1 ){ - } else { 
 			              <a href="@routes.OrderCommand.viewSupplier(order.supplier.id)">
 			              @order.supplier.name
 			              </a>
@@ -64,31 +64,26 @@
 			              </td>
 			              
 			              @if(user.typeUser.id !=5){
-			              <td>
-			              @if(order.status == 1){ 
-			              	A traiter }else{@if(order.status == 2){ 
-			              	Envoyé au fournisseur }else{@if(order.status == 3){ 
-			              	En cours d'envoi }else{ Traiter}}}
-			              </td>
+			              <td>@order.status.name</td>
 			              }
 			              
 			              <td>
-			               @if(order.status == 1){
+			               @if(order.status.id == 1){
 			                @if(user.typeUser.id == 1){
-			                <a href="">
+			                <a href="@routes.OrderCommand.chooseSupplier(order.id)">
 			                 <button class="btn btn-xs btn-danger">Choisir un fournisseur</button>
 			                </a> 
 			                }else{
 			              	<button class="btn btn-custom btn-s" title="Detail"><i class="fa fa-cog"></i></button>
-			              	<a href="@routes.OrderCommand.destroy(order.id, user.id)">
+			              	<a href="@routes.OrderCommand.destroy(user.id, order.id)">
                     	  	<button class="btn btn-custom btn-s"><i class="fa fa-trash-o"></i></button>
                     	  	</a>
                     	  	}
-                    	  	}else { @if(order.status == 3 && user.typeUser.id == 2){
+                    	  	}else { @if(order.status.id == 3 && user.typeUser.id == 2){
                     	  	<a href="@routes.OrderCommand.validReceipt(order.id,order.storesProducts.id, user.id)">
                     	  	<button class="btn btn-xs btn-danger">Valider la reception</button>
                     	  	</a>
-                    	  	}else {@if(order.status == 2 && user.typeUser.id == 5){
+                    	  	}else {@if(order.status.id == 2 && user.typeUser.id == 5){
                     	  	<a href="@routes.OrderCommand.validSend(order.id,order.suppliersProducts.id, user.id)">
                     	  	<button class="btn btn-xs btn-danger">Valider l'envoi</button>
                     	  	</a>
