--- a/app/views/logged.scala.html
+++ b/app/views/logged.scala.html
@@ -21,7 +21,7 @@
 		      }
 		      @if(user.typeUser.id == 4) {
 		      	<li>
-		          <a aria-expanded="false" role="button" href="#"><i class="fa fa-home imenu"></i> Boissons</a>
+		          <a aria-expanded="false" role="button" href="@routes.Drink.Drinks()"><i class="fa fa-home imenu"></i> Boissons</a>
 		        </li>
 		      }
 		      @if(user.typeUser.id == 3 || user.typeUser.id == 4) {
