Fix addSupplier begining

--- a/app/views/addSupplier.scala.html
+++ b/app/views/addSupplier.scala.html
@@ -1,6 +1,6 @@
 @import helper._
 
-@(user: User, form: Form[models.Suppliers], store : models.Suppliers, actionRoute : play.api.mvc.Call)) 
+@(user: User, form: Form[models.Suppliers], store : models.Suppliers, actionRoute : play.api.mvc.Call) 
 @main(user) {
 
 <div class="wrapper wrapper-content">
