Fix login design

--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -23,15 +23,13 @@
 		        @inputText(
 		            loginForm("email"),
 		            'placeholder -> Messages("email"),
-		            '_label -> null,
-		            '_help -> Messages("signin.your.email"),
+		            '_label -> "Adresse mail",
 		            'class -> "form-control input-lg"
 		        )
 		        @inputPassword(
 		            loginForm("password"),
-		            '_label -> null,
+		            '_label -> "Mot de passe",
 		            'placeholder -> Messages("password"),
-		            '_help -> Messages("signin.your.password"),
 		            'class -> "form-control input-lg"
 		        )
 		    </fieldset>
