--- a/app/views/addStore.scala.html
+++ b/app/views/addStore.scala.html
@@ -1,8 +1,10 @@
+@(user: User, storeForm: Form[models.Stores], store : models.Stores, actionRoute : play.api.mvc.Call)
 
 @import helper._
+ @implicitFieldConstructor = @{
+        FieldConstructor(twitterBootstrapInput.render)
+    }
 
-
-@(user: User, form: Form[models.Stores], store : models.Stores, actionRoute : play.api.mvc.Call)
 @main(user) {
 
 
@@ -14,104 +16,70 @@
 		      <div class="ibox-title">
 		        <h3>Ajouter un restaurant</h3>
 		      </div>
-				 @helper.form(action=actionRoute, 'class -> "form-horizontal ") { 
+				 @form(action=actionRoute, 'class -> "form-horizontal ") { 
 
 				<div class="ibox-content">
-		
-				  @if(form.hasGlobalErrors) {
-				      <p class="error">
-				           @form.globalError.message
-				         Erreur !
-				      </p>
-				  }
 				
-					<!-- <form method="post" class="form-horizontal" action="@routes.Store.addStore()" >  -->
 					 <fieldset> 
-					  <div class="form-group">
 						
 						@inputText(   
-								form("name"), 
+								storeForm("name"), 
 		    					'_label -> "Nom du restaurant", 
 		    					'_div_class -> "col-sm-10",
 		   						'class -> "form-control",
 		   						'value -> "store.name",
 		   						'placeholder -> "Name"
 		   						)   
-						</div><br/>	
-						<div class="form-group">
-						
-						<!--  <label class="col-sm-2 control-label">Mail</label> -->
 
 						@inputText(   
-								form("email"), 
+								storeForm("email"), 
 		    					'_label -> "Email", 
 		    					'_div_class -> "col-sm-10",
 		   						'class -> "form-control",
 		   						'value -> "store.email",
 		   						'placeholder -> "Email"
 		   						)   
-						<!--   <input class="form-control" type="text" name="email" value="@store.email"> -->
 						
-					  </div>
 					  <div class="hr-line-dashed"></div>
-					  <div class="form-group">
-					 
-						<!-- <label class="col-sm-2 control-label">Adresse 1</label> -->
+
 						@inputText(   
-								form("adress1"), 
+								storeForm("adress1"), 
 		    					'_label -> "Adresse 1",
 		   						'class -> "form-control",
 		   						'value -> "store.adress1",
 		   						'placeholder -> "Adress 1"
 		   						) 
-						<!--  <input class="form-control" type="text" name="adress1" value="@store.adress1"> -->
-
-					  </div><br/>
-					  <div class="form-group">
-					  
-					  
-					<!-- 	<label class="col-sm-2 control-label">Adresse 2</label> -->
 						
 						@inputText(   
-								form("adress2"), 
+								storeForm("adress2"), 
 		    					'_label -> "Adresse 2",
 		    					'_div_class -> "col-sm-10", 
 		   						'class -> "form-control",
 		   						'value -> "store.adress2",
 		   						'placeholder -> "Adress 2"
 		   						) 
-					<!-- 	  <input class="form-control" type="text" name="adress2" value="@store.adress2"> -->
-					  </div><br/>
-					  <div class="form-group">
-					<!-- 	<label class="col-sm-2 control-label">Code Postal</label> -->
-						<div class="col-sm-6">
+
 						 @inputText(   
-								form("codePostal"), 
+								storeForm("codePostal"), 
 		    					'_label -> "Code Postal",
 		   						'class -> "form-control",
 		   						'value -> "store.codePostal",
 		   						'placeholder -> "Post Code"
 		   						) 
-					<!--	  <input class="form-control" type="text" name="codePostal" value="@store.codePostal"> -->
-						</div> 
-					 <!--	<label class="col-sm-2 control-label">Ville</label> -->
-						<div class="col-sm-6">
+
 						 @inputText(   
-								form("ville"), 
+								storeForm("ville"), 
 		    					'_label -> "Ville", 
 		   						'class -> "form-control",
 		   						'value -> "store.ville",
 		   						'placeholder -> "City"
 		   						) 
-						 <!--  <input class="form-control" type="text" name="ville" value="@store.ville"> -->
-						</div> 
-					  </div>
+
 					  <div class="hr-line-dashed"></div>
 					</fieldset>	
 						<div class="button text-center">
 							<button class="btn btn-primary btn-lg active">Continuer</button>
 						</div>
-					<!-- </form> -->
 					
 				</div>
 			 </div>
