--- a/app/views/supplier.scala.html
+++ b/app/views/supplier.scala.html
@@ -12,7 +12,7 @@
 		      </div>
 		      <div class="ibox-content">
 		        <div class="table-responsive">
-		          <a class="add-link" href="@routes.Supplier.addSupplier()">
+		          <a class="add-link" href="@routes.Supplier.viewAddSupplier()">
      				<button class="btn btn-custom add"><i class="fa fa-plus"></i> Ajouter un fournisseur</button>
      			  </a>
 		          <table class="table table-striped">
