--- a/app/views/addAdminSupplier.scala.html
+++ b/app/views/addAdminSupplier.scala.html
@@ -1,4 +1,4 @@
-@(user: User, usersForm: Form[models.User])
+@(user: User, usersForm: Form[models.User], supplier : Suppliers)
 
 @import helper._
     @implicitFieldConstructor = @{
@@ -14,7 +14,7 @@
 		  <div class="col-lg-12">
 		    <div class="ibox float-e-margins">
 		      <div class="ibox-title">
-		        <h3>Ajouter un restaurant</h3>
+		        <h3>Ajouter un fournisseur</h3>
 		      </div>
 		      
 		      @form(action=controllers.account.routes.Signup.save(), 'class -> "form-horizontal "){
@@ -47,18 +47,9 @@
 				            'placeholder -> Messages("Mot de passe"),
 				            'class -> "form-control"
 				        )
-				        @select(
-				        	usersForm("typeUser.id"),
-				        	options = TypeUser.selectTypeUser.toSeq,
-				        	'_label -> "Fonction",
-				        	'class -> "form-control"
-				        )
-				       @select(
-				        	usersForm("store.id"),
-				        	options = Stores.selectStores.toSeq,
-				        	'_label -> "Magasin",
-				        	'class -> "form-control"
-				        )
+				      
+				      <input type="hidden" name="typeUser.id" value="5" />  
+				      <input type="hidden" name="supplier.id" value="@supplier.id" />
 				    </fieldset>
 				
 					<div class="hr-line-dashed"></div>
